@@ -5,10 +5,12 @@ set env TCLX_LIBRARY ../../tcl/unix
 set env TKX_LIBRARY ../../tk/unix
 set env TCL_PROGRAM ../../tcl/unix/tclXtest
 
+set env LD_LIBRARY_PATH "../../tcl/unix: ../../tk/unix:../../../tcl8.0b2/unix:../../../tk8.0b2/unix"
+
 set env MALLOC_OPTIONS A
 
 handle SIGTERM SIGHUP SIGKILL SIGCHLD pass nostop
-dir ../../tcl/unix ../../tcl/generic ../../tk/unix ../../tk/generic ../../../tcl8.0b2/generic ../../../tcl8.0b2/generic ../../../tk8.0b2/unix ../../../tk8.0b2/unix
+dir ../../tcl/unix ../../tcl/generic ../../tk/unix ../../tk/generic ../../../tcl8.0b2/generic ../../../tcl8.0b2/unix ../../../tk8.0b2/generic ../../../tk8.0b2/unix
 
 
 
