@@ -1281,7 +1281,7 @@
 16 Jun 97: Released TclX 8.0.0 Beta 1
 17 Jun 97: Re-releases TclX 8.0.0 Beta 1 due to mangled patch.
 ===============================================================================
- 4 Jul 97:
+04 Jul 97:
   o Converted all commands that can be converted to work with binary data;
     documented those that don't support binary data.
   o Modified signals to be better behaved with multiple interpreters.
@@ -1296,3 +1296,10 @@
 ===============================================================================
 08 Jul 97: Released TclX 8.0.0 Beta 2
 ===============================================================================
+08 Jul 97:
+  o Fixed core dump when signal occurs during event idle.
+  o The safe Tk package init function is now registered.
+-------------------------------------------------------------------------------
+09 Jul 97:
+  o Added try_eval command.
+-------------------------------------------------------------------------------
